[gd_scene load_steps=9 format=3 uid="uid://cc3b1b5fwxigs"]

[ext_resource type="Script" path="res://assets/scripts/enemies/spear.gd" id="1_0y2sr"]
[ext_resource type="Texture2D" uid="uid://bm587mrdok5fc" path="res://assets/visuals/enemies/spear/spear animations.png" id="2_2rqv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tk0dw"]
size = Vector2(28, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2yk6"]
size = Vector2(164, 26)

[sub_resource type="Animation" id="Animation_ey3cf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon/hitbox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4uj4u"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.466667, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon/hitbox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xt2rn"]
_data = {
"RESET": SubResource("Animation_ey3cf"),
"attack": SubResource("Animation_4uj4u")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvvfu"]
size = Vector2(28, 19)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_0y2sr")

[node name="weapon" type="Sprite2D" parent="."]
texture = ExtResource("2_2rqv4")
hframes = 4
frame = 1

[node name="hitbox" type="Area2D" parent="weapon"]
visible = false

[node name="collider" type="CollisionShape2D" parent="weapon/hitbox"]
position = Vector2(-14, 2.5)
shape = SubResource("RectangleShape2D_tk0dw")

[node name="aggroRange" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="aggroRange"]
position = Vector2(-67, -3)
shape = SubResource("RectangleShape2D_s2yk6")

[node name="footstepTimer" type="Timer" parent="."]

[node name="attack" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xt2rn")
}

[node name="attackTimer" type="Timer" parent="."]

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-5, 2)
max_distance = 200.0
attenuation = 2.37841

[node name="attackRange" type="Area2D" parent="."]
visible = false

[node name="collider" type="CollisionShape2D" parent="attackRange"]
position = Vector2(-14, 0.5)
shape = SubResource("RectangleShape2D_lvvfu")

[connection signal="area_entered" from="aggroRange" to="." method="_on_aggro_area_area_entered"]
[connection signal="area_exited" from="aggroRange" to="." method="_on_aggro_range_area_exited"]
[connection signal="area_entered" from="attackRange" to="." method="_on_attack_range_area_entered"]
